fixed white spaces, checked margins on blog

--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,6 +1,6 @@
 .blog-content {
     display: grid;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 40% 62%;
     grid-template-rows: 100%;
     height: 100%;
 }
@@ -10,15 +10,22 @@
     grid-row: 1;
     height: auto;
     // margin-right: -1em;
-    margin-right: 0;
+    margin-right: 1%;
     z-index: 1;
     margin-top: -35em;
     // border: solid 2px red;
 }
 
-.blog-text-wrapper {
-    // border: solid 2px green;
-    width: auto;
+.blog-top-container {
+    // padding: 2em 1em;
+    margin: 5em 7em 0 1em;
+}
+
+.blog-data,
+.author {
+    display: inline-flex;
+    font-style: normal;
+    margin-bottom: 1.5em;
 }
 
 // ASIDE
@@ -27,7 +34,7 @@
     grid-row: 1;
     // margin-left: 0.1em;
     margin-left: 0;
-    margin-top: 3em;
+    margin-top: 7em;
     z-index: 1;
     // border: solid 2px red;
     position: relative;
@@ -61,12 +68,16 @@
     object-fit: cover;
 }
 
-.blog-text-wrapper h3 {
+.blog-text-wrapper h2 {
     // background-color: $darkbluegrey;
     // padding-top: 2em;
     text-align: left;
-    margin-bottom: 0;
-    ;
+    margin-bottom: 0.2em;
+}
+
+.blog-text-wrapper h3 {
+    text-align: left;
+    margin-bottom: 0.3em;
 }
 
 // .blog-text-wrapper {
@@ -91,12 +102,9 @@
 }
 
 .comments .img-wrapper {
-    width: 30%;
+    width: 20%;
+    min-width: 150px;
     padding-right: 3em;
 }
 
 // FORM SECTION
-.form-wrapper {
-    // margin: 5em auto;
-    // display: flex;
-}
