--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -18,9 +18,14 @@ form textarea,
 input {
     width: 100%;
     border: solid 0.1em $robineggblue;
-    background-color: $darkbluegrey;
     padding: 1em;
     margin: 2em 0;
+}
+
+.blog-form-wrapper input[type="text"],
+.blog-form-wrapper input[type="email"],
+.blog-form-wrapper textarea {
+    background-color: $darkbluegrey;
 }
 
 form input {
@@ -42,7 +47,8 @@ textarea {
     color: $spruce;
 }
 
-input:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
 textarea:focus {
     background-color: coral;
 }
