--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,5 +1,5 @@
 header {
-    height: 75vh;
+    height: 70vh;
     min-height: 620px;
     max-height: 1000px;
     background-size: cover;
@@ -16,6 +16,7 @@ header {
 
 .blog-header {
     background-image: url('../assets/blog-header.jpg');
+    height: 45vh;
 }
 
 .contact-header {
