--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -66,5 +66,5 @@ i.fa {
     top: 25px;
     left: -30px;
     bottom: -15px;
-    right: 3px;
+    right: 100px;
 }
