--- a/styles/styles.css
+++ b/styles/styles.css
@@ -322,7 +322,7 @@ h3 {
 }
 
 h4 {
-  font-size: 32px;
+  font-size: calc(10px + (32 - 10) * ((100vw - 300px) / (1600 - 300)));
 }
 
 nav a {
@@ -369,7 +369,7 @@ a {
 }
 
 header {
-  height: 75vh;
+  height: 70vh;
   min-height: 620px;
   max-height: 1000px;
   background-size: cover;
@@ -386,6 +386,7 @@ header {
 
 .blog-header {
   background-image: url("../assets/blog-header.jpg");
+  height: 45vh;
 }
 
 .contact-header {
@@ -472,7 +473,7 @@ i.fa {
   top: 25px;
   left: -30px;
   bottom: -15px;
-  right: 3px;
+  right: 100px;
 }
 
 .gallery,
@@ -647,8 +648,8 @@ footer {
 .blog-content {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 30% 70%;
-      grid-template-columns: 30% 70%;
+  -ms-grid-columns: 40% 62%;
+      grid-template-columns: 40% 62%;
   -ms-grid-rows: 100%;
       grid-template-rows: 100%;
   height: 100%;
@@ -660,13 +661,22 @@ footer {
   -ms-grid-row: 1;
   grid-row: 1;
   height: auto;
-  margin-right: 0;
+  margin-right: 1%;
   z-index: 1;
   margin-top: -35em;
 }
 
-.blog-text-wrapper {
-  width: auto;
+.blog-top-container {
+  margin: 5em 7em 0 1em;
+}
+
+.blog-data,
+.author {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-style: normal;
+  margin-bottom: 1.5em;
 }
 
 .aside {
@@ -675,7 +685,7 @@ footer {
   -ms-grid-row: 1;
   grid-row: 1;
   margin-left: 0;
-  margin-top: 3em;
+  margin-top: 7em;
   z-index: 1;
   position: relative;
 }
@@ -711,9 +721,14 @@ footer {
      object-fit: cover;
 }
 
+.blog-text-wrapper h2 {
+  text-align: left;
+  margin-bottom: 0.2em;
+}
+
 .blog-text-wrapper h3 {
   text-align: left;
-  margin-bottom: 0;
+  margin-bottom: 0.3em;
 }
 
 .comments .content {
@@ -733,7 +748,8 @@ footer {
 }
 
 .comments .img-wrapper {
-  width: 30%;
+  width: 20%;
+  min-width: 150px;
   padding-right: 3em;
 }
 
@@ -801,9 +817,14 @@ form textarea,
 input {
   width: 100%;
   border: solid 0.1em #86e0f9;
-  background-color: #0c1423;
   padding: 1em;
   margin: 2em 0;
+}
+
+.blog-form-wrapper input[type="text"],
+.blog-form-wrapper input[type="email"],
+.blog-form-wrapper textarea {
+  background-color: #0c1423;
 }
 
 form input {
@@ -837,7 +858,8 @@ textarea {
   color: #0f614e;
 }
 
-input:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
 textarea:focus {
   background-color: coral;
 }
